--- a/GameStore.BLL/GameStore.BLL.csproj
+++ b/GameStore.BLL/GameStore.BLL.csproj
@@ -65,16 +65,19 @@
     <Compile Include="BusinessModels\Discount.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="DTO\CartDTO.cs" />
+    <Compile Include="DTO\CategoryDTO.cs" />
     <Compile Include="DTO\GameDTO.cs" />
     <Compile Include="DTO\OrderDTO.cs" />
     <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="Infrastructure\OperationDetails.cs" />
     <Compile Include="Infrastructure\ServiceModule.cs" />
     <Compile Include="Infrastructure\ValidationException.cs" />
+    <Compile Include="Interfaces\ICategoryService.cs" />
     <Compile Include="Interfaces\IGameService.cs" />
     <Compile Include="Interfaces\IOrderService.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CategoryService.cs" />
     <Compile Include="Services\GameService.cs" />
     <Compile Include="Services\OrderService.cs" />
     <Compile Include="Services\UserSevice.cs" />
