--- a/GameStore.DAL/GameStore.DAL.csproj
+++ b/GameStore.DAL/GameStore.DAL.csproj
@@ -57,23 +57,30 @@
     <Compile Include="Entities\ApplicationRole.cs" />
     <Compile Include="Entities\ApplicationUser.cs" />
     <Compile Include="Entities\Cart.cs" />
+    <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Game.cs" />
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Entities\Requirement.cs" />
     <Compile Include="Identity\ApplicationRoleManager.cs" />
     <Compile Include="Identity\ApplicationUserManager.cs" />
     <Compile Include="Interfaces\ICartRepository.cs" />
+    <Compile Include="Interfaces\ICategoryRepository.cs" />
     <Compile Include="Interfaces\IGameRepository.cs" />
     <Compile Include="Interfaces\IRequirementRepository.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
-    <Compile Include="Migrations\201902011439223_InitialCreate.cs" />
-    <Compile Include="Migrations\201902011439223_InitialCreate.Designer.cs">
-      <DependentUpon>201902011439223_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\201902021827019_InitialCreate.cs" />
+    <Compile Include="Migrations\201902021827019_InitialCreate.Designer.cs">
+      <DependentUpon>201902021827019_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201902021950548_Category.cs" />
+    <Compile Include="Migrations\201902021950548_Category.Designer.cs">
+      <DependentUpon>201902021950548_Category.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CartRepository.cs" />
+    <Compile Include="Repositories\CategoryRepository.cs" />
     <Compile Include="Repositories\EFUnitOfWork.cs" />
     <Compile Include="Repositories\GameRepository.cs" />
     <Compile Include="Repositories\OrderRepository.cs" />
@@ -84,8 +91,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201902011439223_InitialCreate.resx">
-      <DependentUpon>201902011439223_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201902021827019_InitialCreate.resx">
+      <DependentUpon>201902021827019_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902021950548_Category.resx">
+      <DependentUpon>201902021950548_Category.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
